--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "motion": "^12.15.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-multi-carousel": "^2.8.6",
     "react-router": "^7.6.1",
     "tailwindcss": "^4.1.8"
   },
