--- a/package.json
+++ b/package.json
@@ -1,35 +1,35 @@
 {
-  "name": "portfolio-vite-react",
+  "name": "portfolio-ts",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "@szhsin/react-accordion": "^1.4.1",
-    "@tailwindcss/vite": "^4.1.8",
-    "motion": "^12.15.0",
+    "@tailwindcss/vite": "^4.1.11",
+    "@types/react-router-dom": "^5.3.3",
+    "motion": "^12.23.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-multi-carousel": "^2.8.6",
-    "react-router": "^7.6.1",
-    "tailwindcss": "^4.1.8"
+    "react-router-dom": "^7.7.1",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
-    "@eslint/js": "^9.25.0",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react": "^4.4.1",
-    "daisyui": "^5.0.43",
-    "eslint": "^9.25.0",
+    "@eslint/js": "^9.30.1",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@vitejs/plugin-react": "^4.6.0",
+    "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
-    "typescript": "^5.8.3",
-    "vite": "^6.3.5"
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.3.0",
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.35.1",
+    "vite": "^7.0.4"
   }
 }
